<!--Whole file written by Alin-->
<resources>
    <string name="app_name">TerraSmart</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Reset password</string>
    <string name="fishingDKBanner">TerraSmart</string>
    <string name="fishingDKSubbanner">Reptile Terrarium</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_home">Home</string>
    <string name="title_temperature">Temperature</string>
    <string name="title_humidity">Humidity</string>
    <string name="title_menu">Menu</string>
    <string name="title_co2">CO2</string>
    <string name="co2">CO2 SETTINGS</string>
    <string name="temperature">TEMPERATURE SETTINGS</string>
    <string name="humidity">HUMIDITY SETTINGS</string>
    <string name="dash">-</string>
    <string name="menu">Menu</string>
    <string name="create_new_terrarium">Create new terrarium</string>
    <string name="view_all_terrarium">View all terrarium</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="createnewterrarium">Create New Terrarium</string>
    <string name="name_of_terrarium">Name of Terrarium</string>
    <string name="co2_level">CO2 Level</string>
    <string name="humidity_level">Humidity Level</string>
    <string name="temperature_level">Temperature Level</string>
    <string name="reptile_type">Reptile Type</string>
    <string name="save">Save</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_co2_level">Enter CO2 Level</string>
    <string name="enter_temperature_level">Enter Temperature Level</string>
    <string name="enter_reptile_type">Enter Reptile Type</string>
    <string name="see_details">See details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="reptiles">
        <item>Select Reptile</item>
        <item>Crocodile</item>
        <item>Lizard</item>
        <item>Snake</item>
        <item>Turtle</item>
    </string-array>
</resources>