<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--Whole file written by Alin-->
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_humidity"
        android:icon="@drawable/ic_humidity"
        android:title="@string/title_humidity" />

    <item
        android:id="@+id/navigation_temperature"
        android:icon="@drawable/ic_temperature"
        android:title="@string/title_temperature" />
    <item
        android:id="@+id/navigation_co2"
        android:icon="@drawable/ic_co2"
        android:title="@string/title_co2" />
    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_more"
        android:title="@string/title_menu" />

</menu>