<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/setting_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="setting"
                android:textSize="40sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Your profile:"
                android:textSize="30sp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/enter_email"
                    android:layout_width="211dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="327dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="abcd@example.com"
                    android:textSize="20sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/enter_username"
                    android:layout_width="121dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:text="@string/username"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <EditText
                    android:id="@+id/username"
                    android:layout_width="270dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="your good name"
                    android:textSize="20sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/enter_password"
                    android:layout_width="212dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/password"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="326dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="******"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/sign_outButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:padding="10dp"
                    android:text="change"
                    android:textSize="22sp">

                </Button>

                <Button
                    android:id="@+id/change_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:padding="10dp"
                    android:text="sign out"
                    android:textSize="22sp">

                </Button>

            </LinearLayout>


        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>